fix icon visible

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1505,7 +1505,7 @@ span {
     width: 156px;
     height: 128px;
     top: -11px;
-    background: url(../../images/header-logo.svg) center 19px/90px no-repeat #ec2033;
+    background: url(/src/images/cancel-music.svg) center 19px/90px no-repeat #ec2033;
     display: block;
     border-radius: 50%;
     position: relative;
