--- a/src/scss/global-styles/_header.scss
+++ b/src/scss/global-styles/_header.scss
@@ -30,7 +30,7 @@
         width: 156px;
         height: 128px;
         top: -11px;
-        background: url(../../images/header-logo.svg) center 19px/90px no-repeat #ec2033;
+        background: url(/src/images/cancel-music.svg) center 19px/90px no-repeat #ec2033;
         display: block;
         
         border-radius: 50%;
